linstaller (1.51.2-1) emily; urgency=low

  * partdisks: use the correct partition in the "delete a system"
               option in the automatic partitioner.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Tue, 25 Oct 2011 16:09:12 +0200

linstaller (1.51.1-1) emily; urgency=low

  * partdisks: deal with invalid partition tables

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 24 Oct 2011 11:20:52 +0200

linstaller (1.51.0-1) emily; urgency=low

  * linstalleralan: ported to alan 0.4.0, support for "config" option
                    in order to specify configuration file from the
                    tree.conf.
  * Release for Beta1.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 03 Oct 2011 12:48:14 +0200

linstaller (1.51.0~pre5-1) emily; urgency=low

  * Added preseed support for "root_noformat": if True, it will not format
    the partition that should be used as /.
    Works only via preseed and only into the root/swap selection dialog.
  * live-config-linstaller: linstalleralan: copy config from /etc/alan,
    added menu item icon.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 25 Sep 2011 11:35:36 +0200

linstaller (1.51.0~pre4-1) emily; urgency=low

  [ tuxpenguin ]
  * Translated some spaghetti-English periods into English.

  [ Eugenio Paolantonio (g7) ]
  * debian/, setup.cfg:
    - Ship to /usr/share/linstaller.
  * debian/alan-ext-linstaller.install, setup.py:
    - Install alan extension in /usr/share/alan.
  * setup.py:
    - Do not ship playground configuration anymore. 
    - Ship semplice-nolive configuration.
  * debian/linstaller-config-semplice.install:
    - Ship semplice-nolive.
  * debian/rules:
    - Install MOs
  * debian/linstaller.install:
    - Ship /usr/share/locale.
  * Make translatable some more strings.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 01 Sep 2011 14:27:05 +0200

linstaller (1.51.0~pre3-1) emily; urgency=low

  * partdisks: library: added is_disk() and device_sort() functions