@@ -2,7 +2,7 @@
 
 [linstaller]
 distribution = Semplice
-modules = welcome.front language.front timezone.front userhost.front partdisks.front bootloader.front summary.front partdisks.inst unsquash.inst language.inst timezone.inst userhost.inst fstab.inst debian.inst semplice.inst bootloader.inst end.front
+modules = welcome.front language.front update.front timezone.front userhost.front partdisks.front bootloader.front summary.front partdisks.inst unsquash.inst language.inst timezone.inst userhost.inst fstab.inst debian.inst semplice.inst bootloader.inst end.front
 special = partdisks.inst unsquash.inst
 
 [module:unsquash]
@@ -10,3 +10,6 @@ image = /live/image/live/filesystem.squashfs
 
 [module:debian]
 remove = /live/image/live/filesystem.packages-remove
+
+[module:update]
+packages = linstaller linstaller-modules-base linstaller-config-semplice alan-ext-linstaller
